target/pkg_audit/vitte_pkg/Payload/usr/local/share/vitte/src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.txt.snap
error[TYPECK_E_ASSIGN_MISMATCH]: cannot assign string to i32
  --> src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.vit:8:9
   |
 4 | let x: i32 = 0
   |     - variable declared here as i32
 8 | set x = "hello"
   |         ^^^^^^^ expected i32, found string
   |
note: Vitte does not implicitly convert string to i32
help: use an integer literal, or change x to string
  suggestion: replace src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.vit:8:9 replace the string literal with an integer literal => `0` (medium confidence) because the target binding `x` is declared as `i32`

Pipeline:
  lexer -> parser -> AST -> HIR -> sema -> typeck [FAILED]
docs: docs://language/type-system/assignment-compatibility
